<resources>
    <string name="app_name">Feeding India</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="not_a_user">Not a user yet?</string>
    <string name="sign_up_as_donor">SIGN UP AS DONOR</string>
    <string name="sign_up_as_hungerhero">SIGN UP AS HUNGERHERO</string>
    <string name="already_a_hungerhero">Already a hungerhero</string>
    <string name="donate">Donate</string>
    <string name="user_form">DONOR FORM</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter full name</string>
    <string name="dob">Date of Birth</string>
    <string name="select_dob">SELECT YOUR DOB</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="required_password">Password</string>
    <string name="create_password">Create Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_number">Enter your mobile number</string>
    <string name="submit">SUBMIT</string>
    <string name="read_more">Read More</string>
    <string name="select_city">Select your city</string>
    <string name="hungerhero_form">HUNGERHERO FORM</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="educational_background">Educational Background/Course</string>
    <string name="enter_edu_background">Enter educational background</string>
    <string name="currently_part_of">School/College/Company/Organization</string>
    <string name="your_answer">Your answer</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="enter_city">Enter your city</string>
    <string name="locality">Locality/Area</string>
    <string name="enter_locality">Enter your locality</string>
    <string name="pin_code">PinCode</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="reason_for_joining">Why do you want to join Feeding India?</string>
    <string name="responsibility">How do you want to be a part?</string>
    <string name="hunger_hero_description">Be a Hunger Hero(Volunteer for donation drives,events) -</string>
    <string name="superhero_description">Be a Super Hero(Volunteer as a Hunger Hero + Take more responsibility and commitment towards the cause) -</string>
    <string name="affordable_time">Time you can give to reducing hunger and food wastage(per week)</string>
    <string name="time1">3-6 hours</string>
    <string name="time2">6-9 hours</string>
    <string name="time3">9-12 hours</string>
    <string name="time4">12-15 hours</string>
    <string name="time5">15+ hours</string>
    <string name="about_me">Three words that best describe you</string>
    <string name="separate">Separate by commas</string>
    <string name="introduced_through">How did you get to know about Feeding India?</string>
    <string name="facebook_page">Facebook Page -</string>
    <string name="website">Website -</string>
    <string name="media">Media Article/News</string>
    <string name="link">Page Link</string>
    <string name="friend">Through a Friend"</string>
    <string name="alert_text">This sign up screen is for hungerheroes who have provided their details on Feeding India web page</string>
    <string name="nav_header_top_text">FI</string>
    <string name="enter_user_email">Enter email</string>
    <string name="make_admin">ADD AS ADMIN</string>
    <string name="remove_admin">REMOVE AS ADMIN</string>
    <string name="reset_password">SEND RESET PASSWORD LINK</string>
    <string name="timer_text">60:00</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="enter_code">Enter verification code</string>
    <string name="verify">VERIFY</string>
    <string name="resend">RESEND CODE</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="my_donations">My Donations</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="hunger_spots">Hunger spots I spotted</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="become_hungerhero">BECOME A HUNGERHERO</string>
    <string name="donation_details">DONATION DETAILS</string>
    <string name="food_description">Food Description</string>
    <string name="enter_description">Enter food description</string>
    <string name="food_prepared_on">When was the food prepared?</string>
    <string name="has_container">Do you have containers?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_up_address">Pickup Location Address</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter full address</string>
    <string name="or">OR</string>
    <string name="locate_on_map">Locate on Map</string>
    <string name="additional_contact_number">Additional Contact Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="user_name">Name</string>
    <string name="user_dob">Date of Birth</string>
    <string name="user_email">Email</string>
    <string name="user_role">Role</string>
    <string name="user_mobile_number">Mobile Number</string>
    <string name="no_of_meals">Number of meals donated</string>
    <string name="city_head">City Head</string>
    <string name="no_city_head">No City Heads Available</string>
    <string name="donor_address">Donor Address</string>
    <string name="hunger_spot_address">HungerSpot Address</string>
    <string name="status_of_delivery">Status of Delivery</string>
    <string name="colon">:</string>
    <string-array name="fragment_titles">
        <item>Donate</item>
        <item>Profile</item>
        <item>Notifications</item>
        <item>My Donations</item>
        <item>My Deliveries</item>
        <item>Hunger spots I spotted</item>
        <item>Add/Remove Admin</item>
        <item>Add Event</item>
        <item>Contact Us</item>
        <item>About Us</item>
    </string-array>
    <string-array name="bottom_nav_fragment_titles">
        <item>Donate</item>
        <item>Feed</item>
        <item>Form</item>
        <item>Validate</item>
    </string-array>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>