<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:layout_margin="@dimen/root_layout_margin"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/stratos"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_ten_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_username"
            android:id="@+id/emailEditText"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/margin_three_dp"
            android:layout_marginRight="@dimen/margin_three_dp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:id="@+id/passwordEditText"
            android:padding="@dimen/margin_five_dp"
            android:layout_marginLeft="@dimen/margin_three_dp"
            android:layout_marginRight="@dimen/margin_three_dp"
            android:background="@drawable/edit_text_border"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickSignInButton"
            android:layout_marginTop="@dimen/margin_five_dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textSize="15sp"
                android:textColor="@color/solidBlue"
                android:id="@+id/rememberMeCheckBox"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/forgotPasswordTextView"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:textColor="@color/solidBlue"
                android:textAlignment="viewEnd"
                android:padding="@dimen/margin_five_dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate"
            android:textSize="20sp"
            android:id="@+id/donate"
            android:textColor="@color/sienna"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_ten_dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_a_user"
            android:textSize="15sp"
            android:textColor="@color/solidBlue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_ten_dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_as_donor"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickDonorSignUpButton"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_as_hungerhero"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickHungerHeroSignUpButton"
            android:layout_marginTop="@dimen/margin_ten_dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_a_hungerhero"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickAlreadyHungerHero"
            android:layout_marginTop="@dimen/margin_ten_dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/facebook_icon" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/twitter" />

        </LinearLayout>

        </LinearLayout>


</ScrollView>
